<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="#ffffff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/toolbar_color"
        android:elevation="@dimen/toolbar_elevation"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/app_menu">

        <RelativeLayout
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:orientation="horizontal"
            android:padding="@dimen/search_edit_text_padding"
            android:visibility="gone">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_margin="@dimen/edit_text_margin"
                android:ems="10"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:imeOptions="actionSearch"
                android:drawableEnd="@drawable/search_icon"
                android:maxLines="1">
            </EditText>

            <Button
                android:id="@+id/ok"
                android:layout_width="@dimen/ok_button_width"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:background="@android:color/transparent"
                android:layout_alignEnd="@+id/editText"
                />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"/>


</androidx.constraintlayout.widget.ConstraintLayout>